[src/lib/generator] fix equal gen bug